--- a/index.html
+++ b/index.html
@@ -5,28 +5,44 @@
     <!-- <link href="css/styles.css" rel="stylesheet" type="text/css"> -->
     <script src="js/jquery-1.11.1.js"></script>
     <script src="js/scripts.js"></script>
-  <title>Triangle</title>
+  <title>Address Book</title>
 </head>
 <body>
   <div class="container">
-    <h1>Triangle</h1>
-    <h2>Enter the length of each side of a triangle</h2>
-    <form id="triangle-form">
-      <div class="form-group">
-        <label for="side1">Side One</label>
-        <input id="side1" type="text">
+    <h1>Address book</h1>
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Add a contact</h2>
+        <form id="form-address-book">
+          <div class="form-group">
+            <label for="input-first-name">First name:</label>
+            <input id="input-first-name" type="text">
+          </div>
+          <div class="form-group">
+            <label for="input-last-name">Last name:</label>
+            <input id="input-last-name" type="text">
+          </div>
+          <div class="form-group">
+            <label for="input-building">Building</label>
+            <input id="input-building" type="text">
+          </div>
+          <div class="form-group">
+            <label for="input-street">Street</label>
+            <input id="input-street" type="text">
+          </div>
+          <div class="form-group">
+            <label for="input-zip">Zip</label>
+            <input id="input-zip" type="text">
+          </div>            
+          <button type="submit" class="btn">Submit</button>
+        </form>
+        <h4 id="users-names"></h4>
       </div>
-      <div class="form-group">
-        <label for="side2">Side Two</label>
-        <input id="side2" type="text">
+      <div class="col-md-6">
+        <h2>Contact details</h2>
+        <h3 class="contact-details-to-show"></h3>     
       </div>
-      <div class="form-group">
-        <label for="side3">Side Three</label>
-        <input id="side3" type="text">
-      </div>
-      <button type="submit" class="btn">Submit</button>
-    </form>
-    <h3 id="result"></h3>
+    </div>  
   </div>
 </body>
 </html>
